[package]
name = "manga-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.18"
image = "0.25.2"
pdf = "0.9.0"
prettytable-rs = "0.10.0"
printpdf = "0.7.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
